# swiv_global

./: .gitignore  .prettierrc  AI_CHAT_RESTORED.md  API_INTEGRATION_COMPLETE.md  Anchor.toml  BLOCKCHAIN_INTEGRATION_COMPLETE.md  CHAT_AND_MATCH_FIX.md  CLEAR_DATA_GUIDE.md  COMPLETE_TEST_GUIDE.md  CONGRATULATIONS.md  CONTRIBUTING.md  CREATE_10_USERS_GUIDE.md  DATA_ARCHITECTURE.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_GUIDE.md  ENGLISH_TRANSLATION_COMPLETE.md  ENGLISH_VERSION_SUMMARY.md  EXPO_ROUTER_FIX.md  EXPO_ROUTER_REMOVED.md  FEED_COMPLETE_FIX.md  FEED_FINAL_FIX.md  FEED_LAYOUT_FINAL.md  FEED_UI_FIX.md  FINAL_COMPLETION_REPORT.md  FINAL_TEST_GUIDE.md  FIX_RLS_QUICK.md  HACKATHON_READY.md  HACKATHON_READY_SUMMARY.md  IMMEDIATE_DEPLOY_SOLUTION.md  INSTALL_GUIDE.md  INTERACTION_FIX.md  LICENSE  MATCH_UI_SIMPLIFY.md  MIDDLEWARE_FIX.md  MISSION_ACCOMPLISHED.txt  NETWORK_FIX.md  NEW_FEATURES_TEST.md  NEXT_STEPS.md  OPENAI_CONNECTION_FIXED.md  PLAYGROUND_STEPS.md  (+40 more)
api/: env.example  middleware.ts.backup  package-lock.json  package.json  tsconfig.json
docs/: AI_CONTEXT_RULES.md  API_DOCUMENTATION.md  CONTEXT_LOG.md  DAY1_EVENING_PROGRESS.md  DAY1_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  FINAL_STATUS.md  INTEGRATION_COMPLETE.md  MATCH_TO_CHAT_GUIDE.md  PRODUCT_FEEDBACK.md  PROJECT_STATUS.md  TECH_STACK.md  complete_fix.sql  create_10_users.sql  fix_rls.sql  supabase_schema.sql  test_chat_data.sql
mobile/: env.example  index.ts  package-lock.json  package.json  tsconfig.json
programs/learning-badge/: Cargo.toml
programs/learning-badge/src/: lib.rs
programs/mentorship/: Cargo.toml  Xargo.toml
programs/mentorship/src/: lib.rs
programs/persona-nft/: Cargo.lock.bak  Cargo.toml
programs/persona-nft/src/: lib.rs
programs/persona-nft/tests/: persona-nft.ts
programs/social-graph/: Cargo.toml
programs/social-graph/src/: lib.rs
programs/social-graph/tests/: social-graph.ts
programs/trust-score/: Cargo.toml
programs/trust-score/src/: lib.rs
programs/trust-score/tests/: trust-score.ts
(+62 files in other folders)
