[package]
name = "persona-nft"
version = "0.1.0"
description = "PersonaNFT Program - Soulbound投资人格NFT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "persona_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

