[package]
name = "social-graph"
version = "0.1.0"
description = "SocialGraph Program - 链上社交关系图"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "social_graph"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"

