[package]
name = "trust-score"
version = "0.1.0"
description = "TrustScore Program - 链上信誉分系统"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trust_score"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"

